--- a/mpc-core/Cargo.toml
+++ b/mpc-core/Cargo.toml
@@ -2,60 +2,11 @@
 name = "mpc-core"
 version = "0.1.0"
 edition = "2021"
-authors = ["MPC Wallet Team"]
-description = "MPC core service for Web3 wallet"
-repository = "https://github.com/your-org/mpc-web3-wallet"
-license = "MIT OR Apache-2.0"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# 密码学库
-curve25519-dalek = { version = "4.0.0", features = ["serde"] }
-ed25519-dalek = "2.0.0"
-k256 = "0.13.0"  # 椭圆曲线密码学，支持secp256k1
-p256 = "0.13.0"
-rand = "0.8.5"
-rand_core = "0.6.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "1.0"
-tokio = { version = "1.0", features = ["full"] }
-warp = "0.3"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-hex = "0.4"
-base64 = "0.20"
-blake3 = "1.3"
-anyhow = "1.0"
-uuid = { version = "1.0", features = ["v4", "serde"] }
-num-bigint = "0.4"
-num-traits = "0.2"
-
-# 强制使用较旧版本以避免 edition2024 问题
-base64ct = "1.5"
-constant_time_eq = "0.2"
-
-# MPC协议实现
-# 注意：实际生产中可能需要专门的MPC库或自行实现
-# mpc-protocol = { git = "https://github.com/your-mpc-repo" }
 
 [dev-dependencies]
-criterion = "0.5"
-tokio-test = "0.4"
-
-[features]
-default = []
-hsm = []  # 硬件安全模块支持
-tee = []  # 可信执行环境支持
-sgx = []  # SGX支持
-
-[profile.release]
-opt-level = 3
-lto = true
-codegen-units = 1
-strip = true
-
-# [patch.crates-io]
-# base64ct = "=1.8.2"
-# constant_time_eq = "=0.3.0"
+assert_cmd = "2.0"
+predicates = "2.1"
