--- a/mpc-core/Cargo.toml
+++ b/mpc-core/Cargo.toml
@@ -12,6 +12,12 @@ num-traits = "0.2"
 rand = "0.8"
 warp = "0.3"
 tokio = { version = "1.0", features = ["full"] }
+thiserror = "1.0"
+tracing-subscriber = "0.3"
+
+[features]
+sgx = []
+hsm = []
 
 [dev-dependencies]
 assert_cmd = "2.0"
